initial-setup/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tea-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tea-app
spec:
  hosts:
  - "*"
  gateways:
  - tea-app-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /tea
    - uri:
        prefix: /actuator
    route:
    - destination:
        host: tea-service
        port:
          number: 9080
    timeout: 10s
